# Nouveau-projet

01-moteur-main/: .gitignore  AGENTS.md  README.md  STATUS.md  _explore_holdco.py  _explore_holdco2.py  _explore_holdco3.py  _extract_holdco_schedules.py  _extract_real_model.py  _validate_opex.py  _validate_opex_breakdown.py  _validate_phase0.py  _validate_pnl.py  _validate_revenues.py  _validate_taxes.py  assets  for_humans.toml  pyproject.toml  run_basic.sh  run_dummy.sh  run_explore.sh
01-moteur-main/.cursor/rules/: financing-and-bs.mdc  project-finance-engine.mdc
01-moteur-main/.streamlit/: config.toml
01-moteur-main/doc/: model.md
01-moteur-main/src/mca_model/: __init__.py  config.py  for_humans.py  utils.py
01-moteur-main/src/mca_model/check/: electricity.py  model.py  units.py
01-moteur-main/src/mca_model/explore/: load.py  process.py
01-moteur-main/src/mca_model/interface/app/: charts.py  home.py  utils.py
01-moteur-main/src/mca_model/interface/cli/: cli.py
01-moteur-main/src/mca_model/model/: capex.py  financing.py  inflation.py  market_price.py  model.py  opex.py  overview.py  ratios.py  taxes.py  utils.py  wcr.py
01-moteur-main/src/mca_model/model/balance_sheet/: entries.py  functions.py  (+2 more)
01-moteur-main/src/mca_model/plumbing/: build.py  nodes.py
01-moteur-main/src/mca_model/repository/: utils.py
01-moteur-main/src/mca_model/service/: actions.py  computing.py  helpers.py  parse.py  tagging.py
01-moteur-main/test/: build_assets.py  conftest.py
01-moteur-main/test/assets/: golden_results.toml  holdco_schedules.toml  model_basic.xlsx  model_dummy.ods  model_dummy.toml  model_dummy.xlsx  real_model.toml
01-moteur-main/test/cli/: test_cli.py
01-moteur-main/test/end to end/: model00.toml  test_end_electricity_production.py  test_end_pnl.py  utils.py
01-moteur-main/test/model/: test_balance_sheet.py  test_cashflow.py  test_electricity.py  test_inflation.py  test_opex.py  test_pnl.py  test_real_model_bs.py  test_real_model_financing.py  test_real_model_opex.py  test_real_model_pnl.py  test_real_model_revenues.py  test_real_model_taxes.py
01-moteur-main/test/unit/: test_build.py  test_computing.py  test_helpers.py  test_parse.py  test_plumbing.py  test_utils.py
01-moteur-main/test/xls/: test_asset.py  test_autotag.py  test_dashboard.py  test_market.py  test_vehicle.py  test_xls_utils.py
01-moteur-main/test_stubs/rich_console/: __init__.py
(+22 files in other folders)
